[gd_scene load_steps=9 format=3 uid="uid://dupg3otdvlo1w"]

[ext_resource type="Script" path="res://main/main.gd" id="1_0be4j"]
[ext_resource type="PackedScene" uid="uid://crk0rsrysnq4l" path="res://background/game_background.tscn" id="1_joqjl"]
[ext_resource type="PackedScene" uid="uid://dfqopa8c1hscn" path="res://player/player.tscn" id="2_6ktxl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwii6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4pjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hmjo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o67bt"]

[sub_resource type="Curve2D" id="Curve2D_qsbpg"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 21, 121, 0, 0, 0, 0, 121, 150, 0, 0, 0, 0, 252, 116, 0, 0, 0, 0, 485, 7, 0, 0, 0, 0, 639, 79, 0, 0, 0, 0, 507, 152, 0, 0, 0, 0, 364, 133, 0, 0, 0, 0, 245, 48, 0, 0, 0, 0, 180, 11, 0, 0, 0, 0, 29, 19, 0, 0, 0, 0, 9, 87, 0, 0, 0, 0, 21, 121)
}
point_count = 12

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_0be4j")

[node name="GameBackground" parent="." instance=ExtResource("1_joqjl")]

[node name="Player" parent="." instance=ExtResource("2_6ktxl")]
position = Vector2(317, 1106)

[node name="GameWall" type="StaticBody2D" parent="."]

[node name="NorthWall" type="CollisionShape2D" parent="GameWall"]
position = Vector2(322, -9)
rotation = 3.14159
scale = Vector2(35, 1)
shape = SubResource("RectangleShape2D_nwii6")
one_way_collision = true

[node name="SouthWall" type="CollisionShape2D" parent="GameWall"]
position = Vector2(320, 1208)
scale = Vector2(35, 1)
shape = SubResource("RectangleShape2D_f4pjx")
one_way_collision = true

[node name="WestWall" type="CollisionShape2D" parent="GameWall"]
position = Vector2(-11, 601)
rotation = 1.5708
scale = Vector2(60, 1)
shape = SubResource("RectangleShape2D_5hmjo")
one_way_collision = true

[node name="EastWall" type="CollisionShape2D" parent="GameWall"]
position = Vector2(652, 597)
rotation = -1.5708
scale = Vector2(60, 1)
shape = SubResource("RectangleShape2D_o67bt")
one_way_collision = true

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2(34, 26)
scale = Vector2(0.884127, 0.827586)
curve = SubResource("Curve2D_qsbpg")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(21, 121)
rotation = 0.282257

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.6
autostart = true

[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
